--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 body {
-    background-color: #f7f7f7;
+    background-color: #494949;
+    background-image: url("images/uw.jpg");
+    background-size: cover;
+    background-blend-mode: overlay;
     color: #000;
     height: 100vh;
     margin: 0 auto;
     display: grid;
     place-content: center;  
-    box-shadow: 5px 5px 0px 1px rgba(247,247,247,0.2);
     line-height: 1.6;    
 }
 
@@ -13,7 +15,8 @@ body {
 
 .content {
     background-color: #fbfbfb;
-    box-shadow: 3px 3px 10px rgba(255, 158, 48, 0.2);    
+    border: .5px goldenrod solid;
+    box-shadow: 3px 3px 5px rgba(255, 158, 48, 0.3);    
 }
 
 .flex-container {
@@ -34,7 +37,7 @@ body {
 
 /* typography */
 
-h1, p {
+h1, h2, p{
     font-family: 'Roboto', sans-serif;
     color: #444444;
     text-align: center;
@@ -44,6 +47,11 @@ h1, p {
 h1 {
     margin-bottom: 0;
     text-align: center;
+}
+
+h2 {
+    margin-bottom: 0;
+    font-size: 1.3rem
 }
 
 p {
@@ -85,6 +93,8 @@ input {
     min-width: 150px;
     margin: 0;
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 button {
