--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: #494949;
-    background-image: url("images/uw.jpg");
+    background-image: url("uw.jpg");
     background-size: cover;
     background-blend-mode: overlay;
     height: 100vh;
