--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 body {
-    background-color: #494949;
-    background-image: url("uw.jpg");
+    background-color: #46535e;
+    background-image: url("images/pizzanic.jpg");
     background-size: cover;
     background-blend-mode: overlay;
+    object-fit: cover;
     height: 100vh;
     margin: 0 auto;
     display: grid;
